--- a/package.json
+++ b/package.json
@@ -7,10 +7,19 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
+  "lint-staged": {
+    "src/**/*.js": ["eslint src --fix", "git add"]
+  },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.0",
+    "husky": "0.14.3",
+    "lint-staged": "7.0.0",
+    "prettier": "1.11.1"
   }
 }
