--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node" : ">=8"
+    "node": ">=8"
   },
   "dependencies": {
+    "bootstrap": "4.0.0",
+    "faker": "^4.1.0",
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-transition-group": "^2.2.1",
+    "reactstrap": "^4.8.0"
   },
   "lint-staged": {
-    "src/**/*.js": ["eslint src --fix", "git add"]
+    "src/**/*.js": [
+      "eslint src --fix",
+      "git add"
+    ]
   },
   "scripts": {
     "precommit": "lint-staged",
