--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "node": ">=8"
   },
   "dependencies": {
-    "bootstrap": "4.0.0",
+    "bootstrap": "next",
+    "classnames": "^2.2.5",
     "faker": "^4.1.0",
     "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-transition-group": "^2.2.1",
-    "reactstrap": "^4.8.0"
+    "reactstrap": "next"
   },
   "lint-staged": {
     "src/**/*.js": [
