--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "node": ">=8"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "next",
     "classnames": "^2.2.5",
     "faker": "^4.1.0",
     "lodash": "^4.17.5",
+    "query-string": "^6.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
