--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   },
   "devDependencies": {
     "eslint": "^4.19.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "husky": "0.14.3",
     "lint-staged": "7.0.0",
-    "prettier": "1.11.1"
+    "prettier": "^1.18.2"
   }
 }
