--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=8"
+    "node": ">=10"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -15,15 +15,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "2.0.3",
     "react-transition-group": "^2.2.1",
     "reactstrap": "next"
-  },
-  "lint-staged": {
-    "src/**/*.js": [
-      "eslint src --fix",
-      "git add"
-    ]
   },
   "scripts": {
     "precommit": "lint-staged",
@@ -32,11 +26,15 @@
     "test": "react-scripts test --env=jsdom"
   },
   "devDependencies": {
-    "eslint": "^4.19.0",
+    "eslint": "5.6.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "husky": "0.14.3",
-    "lint-staged": "7.0.0",
     "prettier": "^1.18.2"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
