--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "reactstrap": "next"
   },
   "scripts": {
-    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom"
+    "test": "react-scripts test --env=jsdom",
+    "lint": "eslint src --fix"
   },
   "devDependencies": {
     "eslint": "5.6.0",
