--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "query-string": "^6.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.0.3",
     "react-transition-group": "^2.2.1",
-    "reactstrap": "next"
+    "reactstrap": "next",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
