--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-scripts": "2.0.3",
     "react-transition-group": "^2.2.1",
     "reactstrap": "next",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
